fix cursor for tag & filterbar overflow

--- a/src/app/components/filter-bar/filter-bar.styles.less
+++ b/src/app/components/filter-bar/filter-bar.styles.less
@@ -7,9 +7,10 @@
   width: @filterBarWidth;
   height: calc(100% - @headerHeight - @filterBarGlobalMargin * 2);
   top: calc(@headerHeight + @filterBarGlobalMargin);
-  left: @globalHorizontalPadding;
+  left: 0;
   border-right: 1px solid @light-gray-1;
   padding-right: @filterBarGlobalMargin;
+  padding-left: @globalHorizontalPadding;
 
   .tag {
     margin: 0 6px 6px 0;
